<resources>
    <string name="app_name">NS News</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="dummy_source_name">Source Name</string>
    <string name="dummy_article_title">Article Title Goes Here</string>
    <string name="dummy_article_published_at">1st july 2019</string>
    <string name="dummy_article_desc">British Royal Marines and officials in Gibraltar have stopped a supertanker suspected of carrying crude oil to Syria, in breach of European Union sanctions, the government of Gibraltar said.r The Grace 1 vessel was halted early on Thursday by Gibraltar police…</string>
    <string name="dummy_article_author">Sawaraj Dekhmukh</string>
    <string name="read_more">READ MORE</string>
    <string name="menu_top_headlines">Top Headlines</string>
    <string name="menu_everything">Everything</string>
    <string name="menu_news_sources">News Sources</string>
    <string name="logout">Logout</string>
    <string name="title_activity_web">Article View</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="title_activity_main2_filter">Main2ActivityFilter</string>
    <string name="title_activity_main2__filter">Main2Activity_Filter</string>
    <string name="title_activity_article">ArticleActivity</string>
</resources>
