<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/article_lr_mr"
    android:layout_marginRight="@dimen/article_lr_mr"
    android:layout_marginTop="@dimen/article_t_mr"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/article_source"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"
            android:text="@string/dummy_source_name" />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"
            android:text="@string/dummy_article_title" />

        <TextView
            android:id="@+id/article_published_at"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="right"
            android:textSize="10sp"
            android:text="@string/dummy_article_published_at" />

        <TextView
            android:id="@+id/article_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/dummy_article_desc" />

        <TextView
            android:id="@+id/article_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="12sp"
            android:layout_marginLeft="30dp"
            android:text="@string/dummy_article_author" />

    </LinearLayout>
</android.support.v7.widget.CardView>